<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".GameActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="65dp"
        android:onClick="PlayGame"
        android:text="@string/start_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="65dp"
        android:onClick="resume"
        android:text="@string/Load_Game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/purchase"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="65dp"
        android:onClick="view_stats"
        android:text="@string/stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button12"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="65dp"
        android:onClick="ViewScoreBoard"
        android:text="@string/ScoreBoard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="532dp"
        android:layout_marginEnd="65dp"
        android:onClick="Logout"
        android:text="@string/Logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button17"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="65dp"
        android:onClick="ViewAccountInfo"
        android:text="@string/AccountInfoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>